--- a/simpleRepo/smartling-config.json
+++ b/simpleRepo/smartling-config.json
@@ -7,7 +7,7 @@
     "locales": [
          {
              "smartling" : "de-DE",
-             "application" : "de-DE"
+             "application" : "ed-ED"
          },
          {
              "smartling" : "es-CO",
