--- a/simpleRepo/smartling-config.json
+++ b/simpleRepo/smartling-config.json
@@ -7,11 +7,19 @@
     "locales": [
          {
              "smartling" : "de-DE",
+             "application" : "de-DE-DE"
+         },
+         {
+             "smartling" : "de-DE",
              "application" : "de-DE"
          },
          {
              "smartling" : "es-CO",
              "application" : "es-CO"
+         },
+         {
+             "smartling" : "es-CO",
+             "application" : "es-CO-CO"
          }
      ],
 
