--- a/simpleRepo/smartling-config.json
+++ b/simpleRepo/smartling-config.json
@@ -12,6 +12,14 @@
          {
              "smartling" : "es-CO",
              "application" : "es-CO"
+         },
+         {
+             "smartling" : "de-DE",
+             "application" : "de-DEE"
+         },
+         {
+             "smartling" : "es-CO",
+             "application" : "es-COO"
          }
      ],
 
