--- a/simpleRepo/smartling-config.json
+++ b/simpleRepo/smartling-config.json
@@ -43,7 +43,7 @@
         
          {
             "type"                      : "json",
-            "authorizeContent"          : "true",
+            "authorizeContent"          : "false",
             "pathRegex"                 : "simpleRepo\\/simple.json",
             "translationPathExpression" : "simpleRepo/${locale}-${originalFile.name}",
             "smartlingDirectives"       : [
