--- a/simpleRepo/smartling-config.json
+++ b/simpleRepo/smartling-config.json
@@ -11,7 +11,7 @@
          },
          {
              "smartling" : "es-CO",
-             "application" : "es-CO"
+             "application" : "b-es-CO"
          }
      ],
 
